// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it overrides expected resources 1`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "createSong",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "MutationcreateSonginit0FunctionMutationcreateSonginit0FunctionAppSyncFunction55782DDF",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationCreateSongDataResolverFnMutationCreateSongDataResolverFnAppSyncFunctionFC04B955",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Mutation\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"createSong\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "SongTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 15))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 2`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "getSong",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QueryGetSongDataResolverFnQueryGetSongDataResolverFnAppSyncFunctionC7E7E88A",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Query\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"getSong\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "SongTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 15))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 3`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "listSongs",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QueryListSongsDataResolverFnQueryListSongsDataResolverFnAppSyncFunctionD32DC12B",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Query\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"listSongs\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "SongTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 15))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 4`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "deleteSong",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationDeleteSongDataResolverFnMutationDeleteSongDataResolverFnAppSyncFunctionDE1E317E",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Mutation\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"deleteSong\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "SongTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 15))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 5`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "updateSong",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "MutationupdateSonginit0FunctionMutationupdateSonginit0FunctionAppSyncFunctionE35F0E12",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationUpdateSongDataResolverFnMutationUpdateSongDataResolverFnAppSyncFunction4ADCC009",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Mutation\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"updateSong\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "SongTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 15))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 6`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "syncSongs",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerysyncSongspreAuth0FunctionQuerysyncSongspreAuth0FunctionAppSyncFunction06967782",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetSongpostAuth0FunctionQuerygetSongpostAuth0FunctionAppSyncFunction30BEE102",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerySyncSongsDataResolverFnQuerySyncSongsDataResolverFnAppSyncFunction70698E3C",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Query\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"syncSongs\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "SongTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 15))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 7`] = `
Object {
  "DependsOn": Array [
    "SongIAMRole5755BC78",
  ],
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "DynamoDBConfig": Object {
      "AwsRegion": Object {
        "Ref": "AWS::Region",
      },
      "DeltaSyncConfig": Object {
        "BaseTableTTL": "20",
        "DeltaSyncTableName": "SongTable",
        "DeltaSyncTableTTL": "15",
      },
      "TableName": Object {
        "Ref": "SongTable",
      },
      "Versioned": true,
    },
    "Name": "SongTable",
    "ServiceRoleArn": Object {
      "Fn::GetAtt": Array [
        "SongIAMRole5755BC78",
        "Arn",
      ],
    },
    "Type": "AMAZON_DYNAMODB",
  },
  "Type": "AWS::AppSync::DataSource",
}
`;
